HR-PS-task-13-BetweenTwoSets::REFACTOR:Improved-performance-by-calling-only-one-method-in-a-loop-and-applying-multiples-in-the-count-increment::https://www.hackerrank.com/challenges/between-two-sets/problem?isFullScreen=true